--- a/code/package.json
+++ b/code/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-type-animation": "^3.2.0",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
