--- a/code/package.json
+++ b/code/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.4",
     "motion": "^12.16.0",
     "next": "15.3.3",
